--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
     "recharts": "^3.0.2",
     "tailwindcss": "^3.4.1",
     "autoprefixer": "^10.4.16",
-    "tesseract.js": "^6.0.1"
+    "tesseract.js": "^6.0.1",
+    "typescript": "^5",
+    "@types/node": "^20"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcryptjs": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
-    "typescript": "^5"
+    "eslint-config-next": "15.3.4"
   }
 }
